<resources>
    <string name="app_name">task09_FullLayout</string>
    <string name="light_traffic_ahead">Light traffic ahead.</string>
    <string name="good_morning">Good morning!</string>
    <string name="weather">Weather</string>
    <string name="calendar">Calendar</string>
    <string name="navigate">Navigate</string>
    <string name="cloudy_72">Cloudy 72º</string>
    <string name="drive">Drive</string>
</resources>