<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#E7E8E8">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                app:srcCompat="@drawable/google_assistant" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginLeft="190dp"
                android:backgroundTint="#E6E7E7"
                android:contentDescription="@string/cloudy_72"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/imgweather" />

            <TextView
                android:id="@+id/textoTiempo"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/cloudy_72"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/good_morning"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/light_traffic_ahead"
            android:textSize="27sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <!-- Cambié los botones por CardViews -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardNavigation"
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="7dp"
                android:padding="5dp"
                app:cardCornerRadius="15dp">

                <ImageButton
                    android:id="@+id/btnNavigation"
                    android:layout_width="67dp"
                    android:layout_height="74dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#FEFEFE"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_mail"
                    app:srcCompat="@drawable/navigate"
                    tools:srcCompat="@drawable/navigate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/navigate"
                    android:textColor="#9E9E9E"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCalendar"
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="7dp"
                android:padding="5dp"
                app:cardCornerRadius="15dp">

                <ImageButton
                    android:id="@+id/btnCalendar"
                    android:layout_width="69dp"
                    android:layout_height="74dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/white"
                    android:backgroundTint="#FEFEFE"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_mail"
                    app:srcCompat="@drawable/calendario" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/calendar"
                    android:textColor="#9E9E9E"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDrive"
                android:layout_width="110dp"
                android:layout_height="120dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="7dp"
                android:padding="5dp"
                app:cardCornerRadius="15dp">

                <ImageButton
                    android:id="@+id/btnDrive"
                    android:layout_width="67dp"
                    android:layout_height="74dp"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#FEFEFE"
                    android:scaleType="centerCrop"
                    android:src="@drawable/drive" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:gravity="center"
                    android:text="@string/drive"
                    android:textColor="#9E9E9E"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/captura" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Just for you"
                android:textSize="16sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:id="@+id/LinearHistorial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="5dp"
                    android:background="#ffffff"
                    android:elevation="5dp"
                    android:padding="5dp"
                    android:shadowColor="#5C5C5C"
                    android:text="entrar"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cardCornerRadius="15dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnMicrofono"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:layout_margin="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:srcCompat="@drawable/icon_microphone" />

    <ImageButton
        android:id="@+id/btnMail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:srcCompat="@drawable/icon_mail"
        android:background="#00000000"
        android:scaleType="fitCenter"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
